--- a/owlsim3/Dockerfile
+++ b/owlsim3/Dockerfile
@@ -10,7 +10,7 @@ RUN git clone https://github.com/monarch-initiative/owlsim-v3.git /data/owlsim3/
 RUN cd /data/owlsim3 && git checkout 8cce7d78 && mvn package -DskipTests -DskipITs
 
 ADD resources/configuration.yaml /data/owlsim3/conf/
-ADD resources/annotations.tsv /data/owlsim3/conf/
+ADD resources/gold_profiles.tsv /data/owlsim3/conf/
 ADD resources/mondo_labels.tsv /data/owlsim3/conf/
 ADD resources/hp.owl /data/owlsim3/conf/
 
