--- a/redland/Dockerfile-base
+++ b/redland/Dockerfile-base
@@ -1,4 +1,4 @@
-FROM ubuntu:16.04
+FROM ubuntu:{UBUNTU_RELEASE}
 
 RUN apt-get update && apt install -y \
     software-properties-common
@@ -6,8 +6,8 @@ RUN apt-get update && apt install -y \
 RUN add-apt-repository ppa:deadsnakes/ppa
 
 RUN apt-get update && apt-get install -y \
-    libc6=2.23-0ubuntu10 \
-    gcc=4:5.3.1-1ubuntu1 \
+    libc6={LIBC_VERSION} \
+    gcc={GCC_VERSION} \
     make \
     gnupg \
     pkg-config \
